test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/enum-wo-comma.widl
enum NoComma { "value1" "value2" };
